[BACKPORT] treewide: Backport CAF msm-4.14 low memory killer changes

--- a/drivers/staging/android/Kconfig
+++ b/drivers/staging/android/Kconfig
@@ -82,6 +82,7 @@ config MTK_ENABLE_AGO
 
 config ANDROID_LOW_MEMORY_KILLER
 	bool "Android Low Memory Killer"
+	select HAVE_LOW_MEMORY_KILLER
 	---help---
 	  Registers processes to be killed when low memory conditions, this is useful
 	  as there is no particular swap space on android.
