--- a/arch/arm64/configs/lancelot_defconfig
+++ b/arch/arm64/configs/lancelot_defconfig
@@ -1186,7 +1186,7 @@ CONFIG_CFG80211_DEVELOPER_WARNINGS=y
 CONFIG_CFG80211_CERTIFICATION_ONUS=y
 CONFIG_CFG80211_REG_CELLULAR_HINTS=y
 CONFIG_CFG80211_REG_RELAX_NO_IR=y
-CONFIG_CFG80211_DEFAULT_PS=y
+# CONFIG_CFG80211_DEFAULT_PS is not set
 CONFIG_CFG80211_DEBUGFS=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CFG80211_CRDA_SUPPORT=y
