--- a/arch/arm64/configs/lancelot_defconfig
+++ b/arch/arm64/configs/lancelot_defconfig
@@ -4523,9 +4523,7 @@ CONFIG_STAGING=y
 #
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
-# CONFIG_MTK_GMO_RAM_OPTIMIZE is not set
-# CONFIG_MTK_ENABLE_GMO is not set
-# CONFIG_MTK_ENABLE_AGO is not set
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
