lancelot: Enable CONFIG_MTK_TASK_TURBO
Signed-off-by: Rama Bondan Prakoso <ramanarubp@gmail.com>

--- a/arch/arm64/configs/lancelot_defconfig
+++ b/arch/arm64/configs/lancelot_defconfig
@@ -1904,6 +1904,7 @@ CONFIG_MTK_AMMS=y
 #
 # Misc configs
 #
+CONFIG_MTK_TASK_TURBO=y
 CONFIG_MTPROF=y
 # CONFIG_MTK_SCHED_MONITOR is not set
 # CONFIG_MTK_WQ_DEBUG is not set
