--- a/drivers/misc/mediatek/connectivity/gps/Makefile
+++ b/drivers/misc/mediatek/connectivity/gps/Makefile
@@ -1,3 +1,4 @@
+MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
 # drivers/barcelona/gps/Makefile
 #
 # Makefile for the Barcelona GPS driver.
@@ -11,14 +12,20 @@
 
 ###############################################################################
 # Necessary Check
+MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
+ifeq ($(CONFIG_MTK_GPS_SUPPORT), y)
+
 ifeq ($(CONFIG_WLAN_DRV_BUILD_IN),)
-ifeq ($(AUTOCONF_H),)
-    $(error AUTOCONF_H is not defined)
-else
-    ccflags-y += -imacros $(AUTOCONF_H)
-endif
+	ifeq ($(AUTOCONF_H),)
+		$(error AUTOCONF_H is not defined)
+	else
+		ccflags-y += -imacros $(AUTOCONF_H)
+	endif
 endif
 
+ifndef TOP
+    TOP := $(srctree)/..
+endif
 ifeq ($(TARGET_BUILD_VARIANT),$(filter $(TARGET_BUILD_VARIANT),userdebug user))
     ldflags-y += -s
 endif
@@ -61,7 +68,110 @@ ccflags-y += -I$(srctree)/drivers/devfreq
 MODULE_NAME := gps_drv
 obj-y += $(MODULE_NAME).o
 
-#WMT_SRC_FOLDER := $(srctree)/../kernel-4.14/drivers/misc/mediatek/connectivity/wmt_drv
+GPS_DRV_CONTROL_LNA := n
+SELECT_GPS_DL_DRV := n
+GPS_DL_HAS_MOCK := n
+GPS_DL_HAS_CONNINFRA_DRV := n
+GPS_SRC_FOLDER := $(TOP)/vendor/mediatek/kernel_modules/connectivity/gps
+
+ifeq ($(CONFIG_ARCH_MTK_PROJECT),"k6833v1_64_swrgo")
+ccflags-y += -DCONFIG_GPSL5_SUPPORT
+ccflags-y += -DCONFIG_GPS_CTRL_LNA_SUPPORT
+GPS_DRV_CONTROL_LNA := y
+endif
+
+ifeq ($(CONFIG_MACH_MT6833),y)
+ccflags-y += -DCONFIG_GPSL5_SUPPORT
+ccflags-y += -DCONFIG_GPS_CTRL_LNA_SUPPORT
+GPS_DRV_CONTROL_LNA := y
+endif
+
+ifeq ($(CONFIG_MACH_MT6885),y)
+SELECT_GPS_DL_DRV := y
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link/hw/inc/connac2_0
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link/hw/inc/connac2_0/coda_gen
+ifeq ($(CONFIG_MTK_COMBO_CHIP_CONSYS_6885),y)
+GPS_DL_HAS_CONNINFRA_DRV := y
+endif
+ifeq ($(CONFIG_MTK_COMBO_CHIP_CONSYS_6893),y)
+GPS_DL_HAS_CONNINFRA_DRV := y
+endif
+endif
+
+ifeq ($(CONFIG_MACH_MT6893),y)
+SELECT_GPS_DL_DRV := y
+# For MT6893, the CODA is same as connac2_0
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link/hw/inc/connac2_0
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link/hw/inc/connac2_0/coda_gen
+ifeq ($(CONFIG_MTK_COMBO_CHIP_CONSYS_6885),y)
+GPS_DL_HAS_CONNINFRA_DRV := y
+endif
+ifeq ($(CONFIG_MTK_COMBO_CHIP_CONSYS_6893),y)
+GPS_DL_HAS_CONNINFRA_DRV := y
+endif
+endif
+
+ifeq ($(SELECT_GPS_DL_DRV),y) # New GPS driver with L1+L5 support
+ifeq ($(GPS_DL_HAS_CONNINFRA_DRV),y)
+CONNINFRA_SRC_FOLDER := $(TOP)/vendor/mediatek/kernel_modules/connectivity/conninfra
+ccflags-y += -I$(CONNINFRA_SRC_FOLDER)/include
+ccflags-y += -DGPS_DL_HAS_CONNINFRA_DRV=1
+endif
+
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link/inc
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link/linux/inc
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link/link/inc
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link/lib/inc
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link/hal/inc
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link/hw/inc
+ccflags-y += -I$(GPS_SRC_FOLDER)/data_link_mock/mock/inc
+
+$(MODULE_NAME)-objs += gps_dl_module.o
+$(MODULE_NAME)-objs += data_link/gps_dl_context.o
+
+$(MODULE_NAME)-objs += data_link/lib/gps_dl_dma_buf.o
+$(MODULE_NAME)-objs += data_link/lib/gps_dl_lib_misc.o
+$(MODULE_NAME)-objs += data_link/lib/gps_dl_hist_rec.o
+$(MODULE_NAME)-objs += data_link/lib/gps_dl_time_tick.o
+$(MODULE_NAME)-objs += data_link/lib/gps_dl_name_list.o
+
+$(MODULE_NAME)-objs += data_link/hw/gps_dl_hw_conn_infra.o
+$(MODULE_NAME)-objs += data_link/hw/gps_dl_hw_bgf.o
+$(MODULE_NAME)-objs += data_link/hw/gps_dl_hw_gps.o
+$(MODULE_NAME)-objs += data_link/hw/gps_dl_hw_power_ctrl.o
+$(MODULE_NAME)-objs += data_link/hw/gps_dl_hw_usrt_apb.o
+$(MODULE_NAME)-objs += data_link/hw/gps_dl_hw_util.o
+
+$(MODULE_NAME)-objs += data_link/hal/gps_dl_hal.o
+$(MODULE_NAME)-objs += data_link/hal/gps_dl_hal_util.o
+$(MODULE_NAME)-objs += data_link/hal/gps_dsp_fsm.o
+$(MODULE_NAME)-objs += data_link/hal/gps_dl_power_ctrl.o
+$(MODULE_NAME)-objs += data_link/hal/gps_dl_isr.o
+$(MODULE_NAME)-objs += data_link/hal/gps_dl_dma.o
+$(MODULE_NAME)-objs += data_link/hal/gps_dl_mcub.o
+$(MODULE_NAME)-objs += data_link/hal/gps_dl_zbus.o
+$(MODULE_NAME)-objs += data_link/hal/gps_dl_conn_infra.o
+
+$(MODULE_NAME)-objs += data_link/link/gps_dl_subsys_reset.o
+$(MODULE_NAME)-objs += data_link/gps_each_link.o
+
+$(MODULE_NAME)-objs += data_link/linux/gps_data_link_devices.o
+$(MODULE_NAME)-objs += data_link/linux/gps_each_device.o
+$(MODULE_NAME)-objs += data_link/linux/gps_dl_linux.o
+$(MODULE_NAME)-objs += data_link/linux/gps_dl_linux_plat_drv.o
+$(MODULE_NAME)-objs += data_link/linux/gps_dl_linux_reserved_mem.o
+$(MODULE_NAME)-objs += data_link/linux/gps_dl_emi.o
+$(MODULE_NAME)-objs += data_link/linux/gps_dl_ctrld.o
+$(MODULE_NAME)-objs += data_link/linux/gps_dl_procfs.o
+$(MODULE_NAME)-objs += data_link/linux/gps_dl_osal.o
+
+ifeq ($(GPS_DL_HAS_MOCK),y)
+$(MODULE_NAME)-objs += data_link_mock/mock/gps_mock_mvcd.o
+$(MODULE_NAME)-objs += data_link_mock/mock/gps_mock_hal.o
+ccflags-y += -DGPS_DL_HAS_MOCK=1
+endif
+
+else #Legacy drivers
 WMT_SRC_FOLDER := $(srctree)/drivers/misc/mediatek/connectivity/wmt_drv
 
 ifeq ($(CONFIG_MTK_COMBO_CHIP),)
@@ -81,10 +191,6 @@ else
         ccflags-y += -DREMOVE_MK_NODE=1
 endif
 
-ifneq ($(filter "CONSYS_6771" "CONSYS_6775" "CONSYS_6779",$(CONFIG_MTK_COMBO_CHIP)),)
-        ccflags-y += -DEMI_MPU_PROTECTION_IS_READY=1
-endif
-
 ccflags-y += -I$(WMT_SRC_FOLDER)/common_main/include
 ccflags-y += -I$(WMT_SRC_FOLDER)/common_main/linux/include
 ccflags-y += -I$(WMT_SRC_FOLDER)/common_main/core/include
@@ -92,17 +198,32 @@ ccflags-y += -I$(WMT_SRC_FOLDER)/common_main/platform/include
 ifneq ($(CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH),)
 ccflags-y += -I$(WMT_SRC_FOLDER)/debug_utility
 endif
+ifeq ($(GPS_DRV_CONTROL_LNA),y)
+ccflags-y += -I$(GPS_SRC_FOLDER)/lna_ctrl/inc
+endif
 
 ifeq ($(CONFIG_MTK_CONN_MT3337_CHIP_SUPPORT),y)
         $(MODULE_NAME)-objs += gps_mt3337.o
 else
         $(MODULE_NAME)-objs += stp_chrdev_gps.o
+ifeq ($(CONFIG_ARCH_MTK_PROJECT),"k6833v1_64_swrgo")
+        $(MODULE_NAME)-objs += stp_chrdev_gps2.o
 endif
-#ifneq ($(CONFIG_MTK_GPS_EMI),)
-#$(MODULE_NAME)-objs += gps_emi.o
-#endif
+ifeq ($(CONFIG_MACH_MT6833),y)
+        $(MODULE_NAME)-objs += stp_chrdev_gps2.o
+endif
+ifeq ($(GPS_DRV_CONTROL_LNA),y)
+        $(MODULE_NAME)-objs += lna_ctrl/src/gps_lna_drv.o
+endif
+endif
+ifneq ($(CONFIG_MTK_GPS_EMI),)
+$(MODULE_NAME)-objs += gps_emi.o
+endif
 ifneq ($(CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH),)
 $(MODULE_NAME)-objs += fw_log_gps.o
 endif
 
+endif
+
+endif #ifeq ($(CONFIG_MTK_GPS_SUPPORT), y)
 # EOF
