Included rtl8188eus rtl8814au rtl8812au in source

--- a/arch/arm64/configs/neternels_defconfig
+++ b/arch/arm64/configs/neternels_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.232 Kernel Configuration
+# Linux/arm64 4.14.234 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -532,6 +532,7 @@ CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_FRAME_VECTOR=y
 # CONFIG_PERCPU_STATS is not set
+# CONFIG_HAVE_LOW_MEMORY_KILLER is not set
 CONFIG_SECCOMP=y
 # CONFIG_PARAVIRT is not set
 # CONFIG_PARAVIRT_TIME_ACCOUNTING is not set
@@ -1893,6 +1894,7 @@ CONFIG_MTK_CQDMA=y
 #
 CONFIG_MTK_PERF_TRACKER=y
 CONFIG_MTK_LOWMEM_HINT=y
+# CONFIG_MTK_TASK_TURBO is not set
 
 #
 # Memory configs
@@ -2264,7 +2266,6 @@ CONFIG_RTLWIFI_DEBUG=y
 CONFIG_RTL8192C_COMMON=y
 CONFIG_RTL8XXXU=y
 CONFIG_RTL8XXXU_UNTESTED=y
-# CONFIG_88XXAU is not set
 CONFIG_WLAN_VENDOR_RSI=y
 # CONFIG_RSI_91X is not set
 CONFIG_WLAN_VENDOR_ST=y
@@ -4432,10 +4433,17 @@ CONFIG_STAGING=y
 # CONFIG_IRDA is not set
 # CONFIG_PRISM2_USB is not set
 # CONFIG_COMEDI is not set
-# CONFIG_RTLLIB is not set
-# CONFIG_RTL8723BS is not set
-# CONFIG_R8712U is not set
-# CONFIG_R8188EU is not set
+CONFIG_RTLLIB=m
+CONFIG_RTLLIB_CRYPTO_CCMP=m
+# CONFIG_RTLLIB_CRYPTO_TKIP is not set
+# CONFIG_RTLLIB_CRYPTO_WEP is not set
+CONFIG_RTL8723BS=m
+CONFIG_R8712U=m
+CONFIG_R8188EU=m
+CONFIG_88EU_AP_MODE=y
+CONFIG_RTL8188EU=m
+CONFIG_88XXAU=m
+CONFIG_RTL8814AU=m
 # CONFIG_VT6656 is not set
 
 #
@@ -4526,6 +4534,7 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 # CONFIG_MTK_GMO_RAM_OPTIMIZE is not set
 # CONFIG_MTK_ENABLE_GMO is not set
 # CONFIG_MTK_ENABLE_AGO is not set
+# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
