--- a/arch/arm64/configs/neternels_defconfig
+++ b/arch/arm64/configs/neternels_defconfig
@@ -56,8 +56,8 @@ CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_POSIX_MQUEUE_SYSCTL=y
 CONFIG_CROSS_MEMORY_ATTACH=y
-# CONFIG_FHANDLE is not set
-# CONFIG_USELIB is not set
+CONFIG_FHANDLE=y
+CONFIG_USELIB=y
 CONFIG_AUDIT=y
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 CONFIG_AUDITSYSCALL=y
@@ -608,7 +608,10 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
+CONFIG_KUSER_HELPERS=y
 CONFIG_SYSVIPC_COMPAT=y
+CONFIG_COMPAT_VDSO=y
+CONFIG_CROSS_COMPILE_ARM32=""
 
 #
 # Power management options
@@ -713,6 +716,8 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
@@ -2135,7 +2140,7 @@ CONFIG_IPVLAN=y
 CONFIG_IPVTAP=y
 CONFIG_VXLAN=y
 CONFIG_GENEVE=y
-# CONFIG_GTP is not set
+CONFIG_GTP=y
 # CONFIG_MACSEC is not set
 # CONFIG_NETCONSOLE is not set
 # CONFIG_NETPOLL is not set
@@ -2262,7 +2267,8 @@ CONFIG_WLAN_VENDOR_ADMTEK=y
 CONFIG_ATH_COMMON=y
 CONFIG_WLAN_VENDOR_ATH=y
 # CONFIG_ATH_DEBUG is not set
-# CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS is not set
+CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS=y
+# CONFIG_ATH_REG_DYNAMIC_USER_CERT_TESTING is not set
 CONFIG_ATH9K_HW=y
 CONFIG_ATH9K_COMMON=y
 CONFIG_ATH9K_COMMON_DEBUG=y
@@ -2292,11 +2298,11 @@ CONFIG_ATH6KL_USB=y
 CONFIG_ATH6KL_DEBUG=y
 CONFIG_ATH6KL_TRACING=y
 CONFIG_ATH6KL_REGDOMAIN=y
-# CONFIG_AR5523 is not set
+CONFIG_AR5523=y
 # CONFIG_ATH10K is not set
 # CONFIG_WCN36XX is not set
 CONFIG_WLAN_VENDOR_ATMEL=y
-CONFIG_AT76C50X_USB=y
+# CONFIG_AT76C50X_USB is not set
 CONFIG_WLAN_VENDOR_BROADCOM=y
 CONFIG_B43=y
 CONFIG_B43_BCMA=y
@@ -2350,8 +2356,8 @@ CONFIG_RT2X00_LIB=y
 CONFIG_RT2X00_LIB_FIRMWARE=y
 CONFIG_RT2X00_LIB_CRYPTO=y
 CONFIG_RT2X00_LIB_LEDS=y
-# CONFIG_RT2X00_LIB_DEBUGFS is not set
-# CONFIG_RT2X00_DEBUG is not set
+CONFIG_RT2X00_LIB_DEBUGFS=y
+CONFIG_RT2X00_DEBUG=y
 CONFIG_WLAN_VENDOR_REALTEK=y
 CONFIG_RTL8187=y
 CONFIG_RTL8187_LEDS=y
@@ -2363,8 +2369,10 @@ CONFIG_RTLWIFI_DEBUG=y
 CONFIG_RTL8192C_COMMON=y
 CONFIG_RTL8XXXU=y
 CONFIG_RTL8XXXU_UNTESTED=y
-# CONFIG_WLAN_VENDOR_RSI is not set
-# CONFIG_WLAN_VENDOR_ST is not set
+CONFIG_WLAN_VENDOR_RSI=y
+# CONFIG_RSI_91X is not set
+CONFIG_WLAN_VENDOR_ST=y
+# CONFIG_CW1200 is not set
 CONFIG_WLAN_VENDOR_TI=y
 CONFIG_WL1251=y
 CONFIG_WL1251_SPI=y
@@ -2397,7 +2405,7 @@ CONFIG_INPUT=y
 CONFIG_INPUT_LEDS=y
 CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_POLLDEV=y
-CONFIG_INPUT_SPARSEKMAP=y
+# CONFIG_INPUT_SPARSEKMAP is not set
 CONFIG_INPUT_MATRIXKMAP=y
 
 #
@@ -2438,20 +2446,20 @@ CONFIG_KEYBOARD_SAMSUNG=y
 CONFIG_KEYBOARD_STOWAWAY=y
 CONFIG_KEYBOARD_SUNKBD=y
 CONFIG_KEYBOARD_OMAP4=y
-CONFIG_KEYBOARD_TM2_TOUCHKEY=y
+# CONFIG_KEYBOARD_TM2_TOUCHKEY is not set
 CONFIG_KEYBOARD_XTKBD=y
 CONFIG_KEYBOARD_CAP11XX=y
 CONFIG_KEYBOARD_BCM=y
 CONFIG_KEYBOARD_MTK=y
 CONFIG_ONEKEY_REBOOT_NORMAL_MODE=y
-CONFIG_TWOKEY_REBOOT_NORMAL_MODE=y
+# CONFIG_TWOKEY_REBOOT_NORMAL_MODE is not set
 CONFIG_ONEKEY_REBOOT_OTHER_MODE=y
-CONFIG_TWOKEY_REBOOT_OTHER_MODE=y
+# CONFIG_TWOKEY_REBOOT_OTHER_MODE is not set
 CONFIG_KPD_PMIC_LPRST_TD=0
 CONFIG_KPD_PWRKEY_USE_PMIC=y
 CONFIG_MTK_MRDUMP_KEY=y
-CONFIG_LONG_PRESS_MODE_EN=y
-CONFIG_KEYBOARD_MTK_PMIC=y
+# CONFIG_LONG_PRESS_MODE_EN is not set
+# CONFIG_KEYBOARD_MTK_PMIC is not set
 CONFIG_INPUT_MOUSE=y
 CONFIG_MOUSE_PS2=y
 CONFIG_MOUSE_PS2_ALPS=y
@@ -2466,17 +2474,15 @@ CONFIG_MOUSE_PS2_SENTELIC=y
 CONFIG_MOUSE_PS2_TOUCHKIT=y
 CONFIG_MOUSE_PS2_FOCALTECH=y
 CONFIG_MOUSE_PS2_SMBUS=y
-CONFIG_MOUSE_SERIAL=y
-CONFIG_MOUSE_APPLETOUCH=y
-CONFIG_MOUSE_BCM5974=y
-CONFIG_MOUSE_CYAPA=y
-CONFIG_MOUSE_ELAN_I2C=y
-CONFIG_MOUSE_ELAN_I2C_I2C=y
-CONFIG_MOUSE_ELAN_I2C_SMBUS=y
-CONFIG_MOUSE_VSXXXAA=y
-CONFIG_MOUSE_GPIO=y
-CONFIG_MOUSE_SYNAPTICS_I2C=y
-CONFIG_MOUSE_SYNAPTICS_USB=y
+# CONFIG_MOUSE_SERIAL is not set
+# CONFIG_MOUSE_APPLETOUCH is not set
+# CONFIG_MOUSE_BCM5974 is not set
+# CONFIG_MOUSE_CYAPA is not set
+# CONFIG_MOUSE_ELAN_I2C is not set
+# CONFIG_MOUSE_VSXXXAA is not set
+# CONFIG_MOUSE_GPIO is not set
+# CONFIG_MOUSE_SYNAPTICS_I2C is not set
+# CONFIG_MOUSE_SYNAPTICS_USB is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_ANALOG=y
 CONFIG_JOYSTICK_A3D=y
@@ -2493,19 +2499,18 @@ CONFIG_JOYSTICK_IFORCE=y
 CONFIG_JOYSTICK_IFORCE_USB=y
 CONFIG_JOYSTICK_IFORCE_232=y
 CONFIG_JOYSTICK_WARRIOR=y
-CONFIG_JOYSTICK_MAGELLAN=y
-CONFIG_JOYSTICK_SPACEORB=y
-CONFIG_JOYSTICK_SPACEBALL=y
-CONFIG_JOYSTICK_STINGER=y
-CONFIG_JOYSTICK_TWIDJOY=y
-CONFIG_JOYSTICK_ZHENHUA=y
-CONFIG_JOYSTICK_AS5011=y
-CONFIG_JOYSTICK_JOYDUMP=y
+# CONFIG_JOYSTICK_MAGELLAN is not set
+# CONFIG_JOYSTICK_SPACEORB is not set
+# CONFIG_JOYSTICK_SPACEBALL is not set
+# CONFIG_JOYSTICK_STINGER is not set
+# CONFIG_JOYSTICK_TWIDJOY is not set
+# CONFIG_JOYSTICK_ZHENHUA is not set
+# CONFIG_JOYSTICK_AS5011 is not set
+# CONFIG_JOYSTICK_JOYDUMP is not set
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
-CONFIG_JOYSTICK_PSXPAD_SPI=y
-CONFIG_JOYSTICK_PSXPAD_SPI_FF=y
+# CONFIG_JOYSTICK_PSXPAD_SPI is not set
 CONFIG_INPUT_TABLET=y
 CONFIG_TABLET_USB_ACECAD=y
 CONFIG_TABLET_USB_AIPTEK=y
@@ -3917,7 +3922,7 @@ CONFIG_USB_OTG=y
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_OTG_FSM is not set
 # CONFIG_USB_LEDS_TRIGGER_USBPORT is not set
-# CONFIG_USB_MON is not set
+CONFIG_USB_MON=y
 # CONFIG_USB_WUSB_CBAF is not set
 
 #
@@ -3939,20 +3944,19 @@ CONFIG_USB_MAX3421_HCD=y
 CONFIG_USB_OHCI_HCD=y
 # CONFIG_USB_OHCI_HCD_SSB is not set
 # CONFIG_USB_OHCI_HCD_PLATFORM is not set
-CONFIG_USB_SL811_HCD=y
-# CONFIG_USB_SL811_HCD_ISO is not set
+# CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
 # CONFIG_USB_HCD_BCMA is not set
 # CONFIG_USB_HCD_SSB is not set
 # CONFIG_USB_HCD_TEST_MODE is not set
-CONFIG_USB_XHCI_MTK_SUSPEND=y
+# CONFIG_USB_XHCI_MTK_SUSPEND is not set
 
 #
 # USB Device Class drivers
 #
 CONFIG_USB_ACM=y
-# CONFIG_USB_PRINTER is not set
-# CONFIG_USB_WDM is not set
+CONFIG_USB_PRINTER=y
+CONFIG_USB_WDM=y
 # CONFIG_USB_TMC is not set
 
 #
@@ -5263,7 +5267,6 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_MAC_TURKISH is not set
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
-CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_VIRTUALIZATION is not set
 
 #
